--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,20 @@
 body {
-    background-color: #e4e5e6;
+    background-color: # d7d7d7;
+    font-family: 'Muli', sans-serif;
 }
 
 .container {
     display: grid;
     grid-template-areas: 
-    "nav header header"
-    "nav content content"
-    "nav footer footer";
+    "header header"
+    "nav content"
+    "nav footer";
     
-    grid-template-columns: 200px 1fr 200px;
+    grid-template-columns: 0.5fr 2fr;
     grid-template-rows: auto 1fr auto;
     grid-gap: 10px;
     height: 100vh;
+    align-items: stretch;
 }
 
 @media (max-width: 768px) {
@@ -36,18 +38,64 @@ body {
     grid-area: header;
 }
 
-.left {
-    grid-area: nav;
-    margin-left: 0.5rem;
-    position: fixed;
+#footer-info {
+    grid-area: footer;
+    height: 100px;
 }
 
 .right {
     grid-area: content;
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    justify-content: flex-end;
+    margin-left: 20px;
 }
 
 .right header {
     font-size: 36px;
+    font-weight: 700;
+    text-align: left;
+}
+
+.right li, .right p {
+    line-height: 150%;
+    font-size: 16px;
+    padding: 10px;
+}
+
+.code {
+    display: block;
+    color: #ca0b0b;
+    white-space: pre;
+    word-break: normal;
+    background-color: #333;
+    padding: 15px;
+    margin: 10px;
+    font-family: 'Inconsolata', monospace;
+}
+
+.or-code {
+    margin-left: 250px;
+}
+
+.main-section {
+  padding: 20px;
+}
+
+.left {
+    grid-area: nav;
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    border-right: 2px solid #8e9294;
+    height: 100%;
+}
+
+.left header {
+    padding: 20px;
+    border-bottom: 3px solid #000;
+    font-size: 24px;
     font-weight: 700;
 }
 
@@ -58,12 +106,16 @@ body {
 }
 
 .left li {
-    line-height: 10vh;
-    border: 3px solid #000;
-    border-left: none;
+    line-height: 5px;
+    border-bottom: 1px solid #000;
+    padding: 10px;
 }
 
-.right code {
-    margin: auto;
-    text-align: center;
+.left a, .left a:hover {
+    text-decoration: none;
+    display: inline-block;
+    padding: 10px 30px;
+    width: 100%;
+    box-sizing: border-box;
+    color: #333;
 }
