Fix responsiveness of web page.

--- a/styles.css
+++ b/styles.css
@@ -1,64 +1,31 @@
 body {
-    background-color: # d7d7d7;
+    background-color: #d7d7d7;
     font-family: 'Muli', sans-serif;
 }
 
 .container {
     display: grid;
     grid-template-areas: 
-    "header header"
-    "nav content"
-    "nav footer";
+    "nav content";
     
-    grid-template-columns: 0.5fr 2fr;
-    grid-template-rows: auto 1fr auto;
-    grid-gap: 10px;
+    grid-template-columns: 2fr 12fr;
+    grid-template-rows: 100vh;
+    grid-gap: 20px;
     height: 100vh;
     align-items: stretch;
 }
 
-@media (max-width: 768px) {
-  .container {
-    grid-template-areas:
-      "header"
-      "nav"
-      "content"
-      "footer";
-
-    grid-template-columns: 1fr;
-    grid-template-rows: auto minmax(75px, auto) 1fr auto;
-  }
-
-  nav, aside {
-    margin: 0;
-  }
-}
-
-.docs-header {
-    grid-area: header;
-}
-
-#footer-info {
-    grid-area: footer;
-    height: 100px;
-}
-
-.right {
+.main-content {
     grid-area: content;
-    display: flex;
-    position: relative;
-    flex-direction: column;
-    justify-content: flex-end;
-    margin-left: 20px;
 }
 
-.right header {
+.main-content header {
     font-size: 36px;
     font-weight: 700;
     text-align: left;
 }
 
-.right li, .right p {
+.main-content li, .main-content p {
     line-height: 150%;
     font-size: 16px;
     padding: 10px;
@@ -67,55 +34,92 @@ body {
 .code {
     display: block;
     color: #ca0b0b;
-    white-space: pre;
+    white-space: pre-line;
     word-break: normal;
     background-color: #333;
     padding: 15px;
-    margin: 10px;
+    margin: auto;
+    width: 20vw;
     font-family: 'Inconsolata', monospace;
 }
 
 .or-code {
-    margin-left: 250px;
+    text-align: center;
 }
 
-.main-section {
-  padding: 20px;
-}
-
-.left {
+.nav {
     grid-area: nav;
-    display: flex;
-    flex-direction: column;
     position: fixed;
     border-right: 2px solid #8e9294;
     height: 100%;
+    width: 230px;
 }
 
-.left header {
+.nav header {
     padding: 20px;
     border-bottom: 3px solid #000;
     font-size: 24px;
     font-weight: 700;
 }
 
-.left ul {
+.nav ul {
     list-style-type: none;
     padding-left: 0;
     height: 100%;
 }
 
-.left li {
+.nav li {
+    display: block;
     line-height: 5px;
     border-bottom: 1px solid #000;
     padding: 10px;
+    font-size: .9em;
 }
 
-.left a, .left a:hover {
+.nav a, .nav a:hover {
     text-decoration: none;
     display: inline-block;
     padding: 10px 30px;
     width: 100%;
     box-sizing: border-box;
     color: #333;
+}
+
+@media (max-width: 768px) {
+  .container {
+    grid-template-areas:
+      "nav"
+      "content";
+
+    grid-template-columns: 1fr;
+    grid-template-rows: minmax(75px, auto) 1fr;
+  }
+  
+  .main-content {
+      display: block;
+      margin: auto;
+      position: relative;
+      padding-top: 30px;
+  }
+  
+  .nav {
+      display: block;
+      position: absolute;
+      width: 100vw;
+      height: 10%;
+      z-index: 100;
+  }
+  
+  .nav ul {
+      list-style-type: none;
+      padding: 0;
+      height: 3em;
+  }
+
+  .nav li {
+    display: inline-block;
+    margin: 0;
+    font-size: .75em;
+    padding: 0;
+  }
 }
