--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,7 @@ body {
     color: #333;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1598px) and (min-width: 750px) {
   .container {
     grid-template-areas:
       "nav"
@@ -106,6 +106,7 @@ body {
       display: block;
       position: absolute;
       width: 100vw;
+      margin: auto;
       height: 10%;
       z-index: 100;
   }
